--- a/apps/public-site/src/layouts/BaseLayout.astro
+++ b/apps/public-site/src/layouts/BaseLayout.astro
@@ -61,6 +61,18 @@ const jsonLd = structuredData
         is:inline
       />
     ))}
+    
+    <!-- Microsoft Clarity -->
+    <script
+      is:inline
+      set:html={`
+        (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "ustcflhpz9");
+      `}
+    />
   </head>
   <body class="min-h-screen flex flex-col">
     <Header currentPath={currentPath} />
